# test_AI

./: .gitignore  Makefile  README.md  pyproject.toml  run_all.bat
data/: raw_articles.json
news_ai/: config.py  lang_search.py  lang_vector_store.py  scraper.py  search.py  summarizer.py  vector_store.py
scripts/: ingest.py  lang_search.py  load_to_vector_store.py  process_and_index.py  search_cli.py  streamlit_search.py
