[tool.poetry]
name = "test-ai"
version = "0.1.0"
description = "news scrapper"
authors = ["Nikolska, Nataliia, nataliia_nikolska@epam.com"]
packages = [{ include = "news_ai" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

newspaper3k = "^0.2.8"
lxml = { version = "^5.1.0", extras = ["html_clean"] }
openai = "^1.14.3"
langchain = "0.3.23"
python-dotenv = "^1.0.1"
langchain-openai = "^0.3.12"
langchain-community = "^0.3.21"
langchain-chroma = "^0.2.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
